# hymission

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  hyprpm.toml  meson.build
devlog/: 2026-03-07-hyprland-crash.md  2026-03-07-recommand-gesture-and-strip-slide.md  2026-03-07-strip-click-input-fallback.md  2026-03-07-strip-refresh-and-input-regression.md  2026-03-07-strip-transition-polish.md  2026-03-08-gesture-exit-lock-and-layout-coverage.md  2026-03-09-expand-selected-live-focus-stability.md  2026-03-09-toggle-switch-mode-and-release-tracking.md
docs/: architecture.md  research.md  spec.md  todo.md  workspace_strip_plan.md
src/: main.cpp  mission_layout.cpp  mission_layout.hpp  overview_controller.cpp  overview_controller.hpp  overview_logic.cpp  overview_logic.hpp
tools/: layout_demo.cpp  mission_layout_test.cpp  overview_logic_test.cpp
